timetable_solutions/interfaces/base_static/stylesheets/flash_messages.css
/* ====================
CSS file to pair with django's flash messages framework
==================== */
:root {
    /* Positioning */
    --banner_z_index: 1000;

    /* Display */
    --start_height: 0;
    --end_height: 50vh;
    --banner_width: 30vw;
    --banner_left_indent: 35vw;

    /* Background and border */
    --banner_opacity: 0.95;
    --banner_opacity_hover: 1.0;

    /* Animations */
    --message_duration: 6s;

    /* Colours */
    --error_background: #ffb0b5;
    --error_background_hover: #db9195;
    --error_border: #690007;
}

/* ====================
Animations
==================== */
@keyframes error_drop_in {
    0% {
        position: fixed;
        top: var(--start_height);
        left: var(--banner_left_indent);
        z-index: var(--banner_z_index);
        opacity: 0;
    }

    8% {
        position: absolute;
        top: var(--end_height);
        left: var(--banner_left_indent);
        z-index: var(--banner_z_index);
        opacity: var(--banner_opacity);
    }

    90% {
        position: fixed;
        top: var(--end_height);
        left: var(--banner_left_indent);
        z-index: var(--banner_z_index);
        opacity: var(--banner_opacity);
    }

    100% {
        position: fixed;
        top: var(--end_height);
        left: var(--banner_left_indent);
        z-index: var(--banner_z_index);
        opacity: var(--banner_opacity);
    }
}

/* ====================
Components of the flash messages
==================== */
.flash_message_container {
    /* Display */
    display: flex;
    flex-direction: column;
    width: var(--banner_width);
    align-items: center;
    justify-content: center;

    /* Animations */
    animation-name: error_drop_in;
    animation-duration: var(--message_duration);
    animation-iteration-count: 1;
    animation-fill-mode: forwards;
}

.flash_message_base {
    /* Display */
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 30px;
    margin: 2px;
    padding: 5px;

    /* Typography */
    font-size: 15px;
    font-weight: bold;
    text-align: center;
    vertical-align: middle;

    /* Border */
    border-radius: 10px;
    border-weight: 1px;
    border-style: solid;
}

.close_error_button {
    /* Positioning */
    position: absolute;
    right: 0;

    /* Display */
    display: flex;
    align-items: center;
    justify-content: center;
    width: 20px;
    height: 20px;
    margin-right: 5px;
    padding: 2px;

    /* Typography */
    text-align: center;

    /* Background, border and misc */
    background-color: #d1cfcf;
    opacity: 0.7;
    border-radius: 5px;
    cursor: pointer;
}
.close_error_button:hover {
    opacity: 0.95;
}

.error_message {
    background-color: var(--error_background);
    border-color: var(--error_border);
}
.error_message:hover {
    background-color: var(--error_background_hover);
    opacity: var(--banner_opacity_hover);
}

